--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
-<html>
-
-<head>
-  <title>Успевай гораздо больше</title>
-
-  <meta charset="utf-8" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" type="text/css" href="/style.css" />
-  <link rel="stylesheet" type="text/css" href="/lp.css" />
-  <link rel="stylesheet" type="text/css" href="/vendor/font-awesome-4.5.0/css/font-awesome.min.css">
-</head>
-
-<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+---
+layout: lp
+title: Успевай гораздо больше
+---
 
 <section id="hero">
   <div class="container">
@@ -311,11 +301,3 @@
     </div>
   </div>
 </div>
-
-<!-- javascript -->
-
-<script src="/vendor/jquery/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="/vendor/bootstrap-3.3.6/js/bootstrap.min.js"></script>
-</body>
-
-</html>
